modular server working and commented